[package]
name = "advent-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
eyre = "0.6.8"
hex = "0.4.3"
itertools = "0.10.5"
md-5 = "0.10.5"
nom = "7.1.1"
once_cell = "1.16.0"
regex = "1.7.0"
