[package]
name = "advent-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
hex = "0.4.3"
itertools = "0.11.0"
md-5 = "0.10.5"
nom = "7.1.1"
regex = "1.7.0"
serde_json = "1.0.87"
