[package]
name = "advent-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
hex = "0.4.3"
itertools = "0.13.0"
md-5 = "0.10.6"
nom = "7.1.3"
regex = "1.11.0"
serde_json = "1.0.128"
