[package]
name = "advent-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-of-code-ocr = "0.1.1"
anyhow = "1.0.70"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.11.0"
md5 = "0.7.0"
nom = "7.1.3"
regex = "1.7.3"
